--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,6 +4,7 @@ phases:
   build:
     commands:
       - echo Build started on `date`
+      - chmod +x ./gradlew
       - ./gradlew test
   post_build:
     commands:
